--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <form id="lyric-generator-form">
           <input
             type="text"
-            placeholder="Enter any question about 1949"
+            placeholder="Enter a question about 1949"
             autofocus
             required
             autocomplete="off"
