--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rock+Salt&family=Style+Script&display=swap" rel="stylesheet">
-    <title>1949 Til Infinity by Maya Claros</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Pinyon+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rock+Salt&family=Style+Script&display=swap" rel="stylesheet"> <title>1949 Til Infinity by Maya Claros</title>
   </head>
   <body>
 
 
     <div class="container">
       <header>
-        <h1>Let's Go Back to 1949</h1>
+        <h1>Happy 75th Birthday, Mom</h1>
+        <h2>Let's Go Back to 1949</h2>
       </header>
       
      
